syntax = "proto3";

package ProfilePackage;

service Profile {
    rpc getProfile (UserId) returns (UserProfile);
    rpc getUser(UserId) returns (User);
    rpc updateProfile (NewData) returns (Result);
}

message UserId {
    string userid = 1;
}

message User {
    bool success = 1;
    string username = 2;
    string name = 3;
    string picture = 4;
}

message UserProfile {
    bool success = 1;
    string username = 2;
    string name = 3;
    string picture = 4;
    int32 followers = 5;
    int32 followings = 6;
    int32 likes = 7;
    int32 posts = 8;
    int32 views = 9;
}

message NewData {
    string userid = 1;
    string name = 2;
}

message Result {
    bool success = 1;
}